# Medical-imaging-software

./: CMakeLists.txt  README.md  README_CN.md
src/: CMakeLists.txt  README.txt  README_CN.txt  main.cpp
src/Core/: CMakeLists.txt  DataModel.cpp  DataModel.h  ImageProcessor.cpp  ImageProcessor.h  RegistrationManager.cpp  RegistrationManager.h  RenderingEngine.cpp  RenderingEngine.h
src/GUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow_clean.h  ParameterPanel.cpp  ParameterPanel.h  ViewportWidget.cpp  ViewportWidget.h
src/Plugins/: CMakeLists.txt  PluginInterface.h  PluginManager.cpp  PluginManager.h
src/Plugins/Implementations/: CMakeLists.txt
src/Utils/: CMakeLists.txt  Config.cpp  Config.h  Logger.cpp  Logger.h  VTKUtils_fixed.cpp  VTKUtils_fixed.h
